Remove reference to localhost

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <script>
       var getMatches = function(arena, callback) {
         var xhr = new XMLHttpRequest();
-        xhr.open("GET", "http://localhost:5112/matches/" + arena + "/current");
+        xhr.open("GET", "/matches/" + arena + "/current");
         xhr.responseType = "json";
         xhr.addEventListener("load", function(e) {
           callback(e.target.response);
