--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
 
       body {
+        font-family: sans-serif;
         font-size: 13pt;
       }
 
@@ -60,6 +61,10 @@
         font-weight: bold;
         text-align: center;
       }
+
+      .grey {
+        color: rgb(100, 100, 100);
+      }
     </style>
 
     <script src="//closure-library.googlecode.com/git/closure/goog/base.js"></script>
@@ -68,7 +73,7 @@
   <body>
     <div id="current" class="section">
       <h1>Current</h1>
-      <h2>Starts at: <span class="start_time"></span></h2>
+      <h2>Match <span class="match"></span>, starts at: <span class="start_time"></span></h2>
       <div class="clear"></div>
 
       <table>
@@ -83,13 +88,17 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr class="grey">
+          <td colspan="2">Arena 1</td>
+          <td colspan="2">Arena 2</td>
         </tr>
       </table>
     </div>
 
     <div id="next" class="section">
       <h1>Next</h1>
-      <h2>Starts at: <span class="start_time"></span></h2>
+      <h2>Match <span class="match"></span>, starts at: <span class="start_time"></span></h2>
       <div class="clear"></div>
 
       <table>
@@ -104,13 +113,17 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr class="grey">
+          <td colspan="2">Arena 1</td>
+          <td colspan="2">Arena 2</td>
         </tr>
       </table>
     </div>
 
     <div id="next-plus-one" class="section">
       <h1>Next+1</h1>
-      <h2>Starts at: <span class="start_time"></span></h2>
+      <h2>Match <span class="match"></span>, starts at: <span class="start_time"></span></h2>
       <div class="clear"></div>
 
       <table>
@@ -125,6 +138,10 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr class="grey">
+          <td colspan="2">Arena 1</td>
+          <td colspan="2">Arena 2</td>
         </tr>
       </table>
     </div>
@@ -133,6 +150,7 @@
       goog.require("goog.async.Delay");
       goog.require("goog.dom.query");
       goog.require("goog.net.XhrIo");
+      goog.require("goog.string");
       goog.require("goog.string.format");
     </script>
 
@@ -146,8 +164,12 @@
       };
 
       var updateSection = function(matchA, matchB, section) {
+        var match = goog.dom.query(".match", section)[0];
+        match.textContent = matchA.number;
+
         var startTime = goog.dom.query(".start_time", section)[0];
-        startTime.textContent = matchA.start_time;
+        var startTimeDate = new Date(matchA.start_time);
+        startTime.textContent = startTimeDate.getHours() + ":" + goog.string.padNumber(startTimeDate.getMinutes(), 2);
 
         var tds = goog.dom.query("table td", section);
         tds[0].textContent = matchA.teams[0];
