Use arena name rather than number

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <td></td>
         </tr>
         <tr class="grey">
-          <td colspan="2">Arena 1</td>
-          <td colspan="2">Arena 2</td>
+          <td colspan="2">Arena A</td>
+          <td colspan="2">Arena B</td>
         </tr>
       </table>
     </div>
@@ -115,8 +115,8 @@
           <td></td>
         </tr>
         <tr class="grey">
-          <td colspan="2">Arena 1</td>
-          <td colspan="2">Arena 2</td>
+          <td colspan="2">Arena A</td>
+          <td colspan="2">Arena B</td>
         </tr>
       </table>
     </div>
@@ -140,8 +140,8 @@
           <td></td>
         </tr>
         <tr class="grey">
-          <td colspan="2">Arena 1</td>
-          <td colspan="2">Arena 2</td>
+          <td colspan="2">Arena A</td>
+          <td colspan="2">Arena B</td>
         </tr>
       </table>
     </div>
