Fix corner columns to be the same width

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
       .grey {
         color: rgb(100, 100, 100);
       }
+      
+      .corner0, .corner1, .corner2, .corner3 {
+        width: 25%;
+        table-layout: fixed;
+      }
     </style>
 
     <script src="//closure-library.googlecode.com/git/closure/goog/base.js"></script>
